--- a/catalog.html
+++ b/catalog.html
@@ -281,7 +281,7 @@
             <ul>
               <li>
                 <div class="nft-content-container">
-                  <img src="./imgs/nft-card-1.jpg" alt="Item Preview" /><a
+                  <img src="./imgs/nft-card-1.svg" alt="Item Preview" /><a
                     href="#"
                     >SKISIRS#2</a
                   >
@@ -289,7 +289,7 @@
               </li>
               <li>
                 <div class="nft-content-container">
-                  <img src="./imgs/nft-card-2.jpg" alt="Item Preview" /><a
+                  <img src="./imgs/nft-card-2.svg" alt="Item Preview" /><a
                     href="#"
                     >SKISIRS#2</a
                   >
@@ -297,7 +297,7 @@
               </li>
               <li>
                 <div class="nft-content-container">
-                  <img src="./imgs/nft-card-3.jpg" alt="Item Preview" /><a
+                  <img src="./imgs/nft-card-3.svg" alt="Item Preview" /><a
                     href="#"
                     >SKISIRS#2</a
                   >
@@ -305,7 +305,7 @@
               </li>
               <li>
                 <div class="nft-content-container">
-                  <img src="./imgs/nft-card-4.jpg" alt="Item Preview" /><a
+                  <img src="./imgs/nft-card-4.svg" alt="Item Preview" /><a
                     href="#"
                     >SKISIRS#2</a
                   >
@@ -313,7 +313,7 @@
               </li>
               <li>
                 <div class="nft-content-container">
-                  <img src="./imgs/nft-card-5.jpg" alt="Item Preview" /><a
+                  <img src="./imgs/nft-card-5.svg" alt="Item Preview" /><a
                     href="#"
                     >SKISIRS#2</a
                   >
@@ -321,7 +321,7 @@
               </li>
               <li>
                 <div class="nft-content-container">
-                  <img src="./imgs/nft-card-6.jpg" alt="Item Preview" /><a
+                  <img src="./imgs/nft-card-6.svg" alt="Item Preview" /><a
                     href="#"
                     >SKISIRS#2</a
                   >
@@ -329,7 +329,7 @@
               </li>
               <li>
                 <div class="nft-content-container">
-                  <img src="./imgs/nft-card-7.jpg" alt="Item Preview" /><a
+                  <img src="./imgs/nft-card-7.svg" alt="Item Preview" /><a
                     href="#"
                     >SKISIRS#2</a
                   >
@@ -337,7 +337,7 @@
               </li>
               <li>
                 <div class="nft-content-container">
-                  <img src="./imgs/nft-card-8.jpg" alt="Item Preview" /><a
+                  <img src="./imgs/nft-card-8.svg" alt="Item Preview" /><a
                     href="#"
                     >SKISIRS#2</a
                   >
@@ -345,7 +345,7 @@
               </li>
               <li>
                 <div class="nft-content-container">
-                  <img src="./imgs/nft-card-9.jpg" alt="Item Preview" /><a
+                  <img src="./imgs/nft-card-9.svg" alt="Item Preview" /><a
                     href="#"
                     >SKISIRS#2</a
                   >
