Added filter form

--- a/catalog.html
+++ b/catalog.html
@@ -86,41 +86,61 @@
         </div>
       </section>
       <section class="catalog-section">
-        <div class="filter-options-container">
+        <form class="filter-options-container" action="">
           <details class="filter-category">
             <summary class="filter-query">CLOTHING</summary>
             <ul class="filter-type-list">
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="clothing-combatant"
+                  />
                   <span class="custom-checkbox"></span>
                   Combatant
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="clothing-ninja"
+                  />
                   <span class="custom-checkbox"></span>
                   Ninja
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="clothing-king"
+                  />
                   <span class="custom-checkbox"></span>
                   King
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="clothing-queen"
+                  />
                   <span class="custom-checkbox"></span>
                   Queen
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="clothing-robot"
+                  />
                   <span class="custom-checkbox"></span>
                   Robot
                 </label>
@@ -132,35 +152,55 @@
             <ul class="filter-type-list">
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="eyes-yellow"
+                  />
                   <span class="custom-checkbox"></span>
                   Yellow
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="eyes-mix"
+                  />
                   <span class="custom-checkbox"></span>
                   Mix
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="eyes-orange"
+                  />
                   <span class="custom-checkbox"></span>
                   Orange
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="eyes-glow"
+                  />
                   <span class="custom-checkbox"></span>
                   Glow
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="eyes-blue"
+                  />
                   <span class="custom-checkbox"></span>
                   Blue
                 </label>
@@ -172,7 +212,11 @@
             <ul class="filter-type-list">
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="face-some-value"
+                  />
                   <span class="custom-checkbox"></span>
                   Some Value
                 </label>
@@ -184,7 +228,11 @@
             <ul class="filter-type-list">
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="skin-some-value"
+                  />
                   <span class="custom-checkbox"></span>
                   Some Value
                 </label>
@@ -196,7 +244,11 @@
             <ul class="filter-type-list">
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="background-some-value"
+                  />
                   <span class="custom-checkbox"></span>
                   Some Value
                 </label>
@@ -208,42 +260,62 @@
             <ul class="filter-type-list">
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="special-cat"
+                  />
                   <span class="custom-checkbox"></span>
                   Cat
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="special-sakura"
+                  />
                   <span class="custom-checkbox"></span>
                   Sakura
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="special-snake"
+                  />
                   <span class="custom-checkbox"></span>
                   Snake
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="special-earth"
+                  />
                   <span class="custom-checkbox"></span>
                   Earth
                 </label>
               </li>
               <li class="filter-type-item">
                 <label>
-                  <input type="checkbox" class="filter-checkbox" />
+                  <input
+                    type="checkbox"
+                    class="filter-checkbox"
+                    id="special-water"
+                  />
                   <span class="custom-checkbox"></span>
                   Water
                 </label>
               </li>
             </ul>
           </details>
-        </div>
+        </form>
         <div class="catalog-content-container">
           <div class="catalog-header">
             <h2>All Items</h2>
