Cleaned up image tags added form to current filters container

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -63,8 +63,6 @@
           <img
             src="./imgs/wallet-2.svg"
             alt="connect wallet icon"
-            width="24"
-            height="24"
             class="icon"
           />
           CONNECT
@@ -89,7 +87,7 @@
         <figure class="product-img">
           <img
             src="./imgs/skeleton.svg"
-            alt="very descriptive product alt :>"
+            alt="descriptive product alt goes here"
           />
           <div class="countdown">
             <p class="countdown-heading">PUBLIC END IN</p>
@@ -168,20 +166,12 @@
           </form>
           <div class="invitation-container">
             <a href="#" class="discord-link"
-              ><img
-                src="./imgs/discord-original.svg"
-                alt="DiscordIcon"
-                width="24"
-                height="24"
-              />JOIN DISCORD</a
+              ><img src="./imgs/discord-original.svg" alt="DiscordIcon" />JOIN
+              DISCORD</a
             >
             <a href="#" class="twitter-link"
-              ><img
-                src="./imgs/twitter-1.svg"
-                alt="TwitterIcon"
-                width="24"
-                height="24"
-              />JOIN TWITTER</a
+              ><img src="./imgs/twitter-1.svg" alt="TwitterIcon" />JOIN
+              TWITTER</a
             >
           </div>
         </section>
@@ -256,14 +246,14 @@
             class="collection-back-btn"
             aria-label="Go Back"
           >
-            <img src="./imgs/arrow-left-3.svg" alt="Left arrow" />
+            <img src="./imgs/arrow-left-3.svg" alt="left arrow" />
           </button>
           <button
             type="button"
             class="collection-forward-btn"
             aria-label="Go Forward"
           >
-            <img src="./imgs/arrow-right-3.svg" alt="Right arrow" />
+            <img src="./imgs/arrow-right-3.svg" alt="right arrow" />
           </button>
         </form>
       </section>
@@ -368,11 +358,7 @@
           </li>
           <li class="social-item">
             <a href="#" class="social-link"
-              ><img
-                src="./imgs/community-3.svg"
-                alt="Youtube"
-                width="20"
-                height="14.81"
+              ><img src="./imgs/community-3.svg" alt="Youtube" width="20"
             /></a>
           </li>
           <li class="social-item">
@@ -386,11 +372,7 @@
           </li>
           <li class="social-item">
             <a href="#" class="social-link"
-              ><img
-                src="./imgs/community-6.svg"
-                alt="Discord"
-                width="20"
-                height="14.78"
+              ><img src="./imgs/community-6.svg" alt="Discord" width="20"
             /></a>
           </li>
         </ul>
