--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
           <img
             src="./imgs/wallet-2.svg"
             alt="connect wallet icon"
-            width="24"
-            height="24"
-            class="icon"
           />
           CONNECT
         </a>
@@ -108,9 +105,7 @@
           </div>
           <img
             src="./imgs/binabox-cube.png"
-            alt="BinaBox Cube"
-            width="970"
-            height="846"
+            alt="binabox cube"
             class="main-img"
           />
         </div>
@@ -123,9 +118,7 @@
               <div class="nft-content-container">
                 <img
                   src="./imgs/nft-card-1.jpg"
-                  alt="nft card icon"
-                  width="290"
-                  height="290"
+                  alt="descriptive nft alt goes here"
                   class="nft-card-img"
                 />
                 <a href="#" class="nft-card-link">SKISIRS#2</a>
@@ -135,9 +128,7 @@
               <div class="nft-content-container">
                 <img
                   src="./imgs/nft-card-2.jpg"
-                  alt="Icon"
-                  width="290"
-                  height="290"
+                  alt="descriptive nft alt goes here"
                   class="nft-card-img"
                 />
                 <a href="#" class="nft-card-link">SKISIRS#2</a>
@@ -147,9 +138,7 @@
               <div class="nft-content-container">
                 <img
                   src="./imgs/nft-card-3.jpg"
-                  alt="Icon"
-                  width="290"
-                  height="290"
+                  alt="descriptive nft alt goes here"
                   class="nft-card-img"
                 />
                 <a href="#" class="nft-card-link">SKISIRS#2</a>
@@ -159,9 +148,7 @@
               <div class="nft-content-container">
                 <img
                   src="./imgs/nft-card-4.jpg"
-                  alt="Icon"
-                  width="290"
-                  height="290"
+                  alt="descriptive nft alt goes here"
                   class="nft-card-img"
                 />
                 <a href="#" class="nft-card-link">SKISIRS#2</a>
@@ -171,9 +158,7 @@
               <div class="nft-content-container">
                 <img
                   src="./imgs/nft-card-5.jpg"
-                  alt="Icon"
-                  width="290"
-                  height="290"
+                  alt="descriptive nft alt goes here"
                   class="nft-card-img"
                 />
                 <a href="#" class="nft-card-link">SKISIRS#2</a>
@@ -183,9 +168,7 @@
               <div class="nft-content-container">
                 <img
                   src="./imgs/nft-card-6.jpg"
-                  alt="Icon"
-                  width="290"
-                  height="290"
+                  alt="descriptive nft alt goes here"
                   class="nft-card-img"
                 />
                 <a href="#" class="nft-card-link">SKISIRS#2</a>
@@ -285,22 +268,22 @@
             <article class="how-to-cards">
               <ul class="how-to-card-list">
                 <li class="how-to-card-item glow-container">
-                  <img src="./imgs/card-one.svg" alt="Step1" />
+                  <img src="./imgs/card-one.svg" alt="step1 icon" />
                   <h3 class="how-to-card-steps color-highlight">STEP 1</h3>
                   <p class="how-to-card-text">Connect Your Wallet</p>
                 </li>
                 <li class="how-to-card-item">
-                  <img src="./imgs/card-two.svg" alt="Step2" />
+                  <img src="./imgs/card-two.svg" alt="step2 icon" />
                   <h3 class="how-to-card-steps color-highlight">STEP 2</h3>
                   <p class="how-to-card-text">Select Your Quality</p>
                 </li>
                 <li class="how-to-card-item">
-                  <img src="./imgs/card-three.svg" alt="Step3" />
+                  <img src="./imgs/card-three.svg" alt="step3 icon" />
                   <h3 class="how-to-card-steps color-highlight">STEP 3</h3>
                   <p class="how-to-card-text">Confirm The Transaction</p>
                 </li>
                 <li class="how-to-card-item">
-                  <img src="./imgs/card-four.svg" alt="Step4" />
+                  <img src="./imgs/card-four.svg" alt="step4 icon" />
                   <h3 class="how-to-card-steps color-highlight">STEP 4</h3>
                   <p class="how-to-card-text">Receive Your NFTs</p>
                 </li>
@@ -311,10 +294,10 @@
           <h2 class="road-map-heading">ROAD MAP</h2>
           <div class="road-map-details-container">
             <figure class="road-map-imgs">
-              <img src="./imgs/roadmap-1.jpg" alt="large-img" />
+              <img src="./imgs/roadmap-1.jpg" alt="descriptive alt goes here" />
               <div class="road-map-inner-imgs">
-                <img src="./imgs/roadmap-2.jpg" alt="small-top-img" />
-                <img src="./imgs/roadmap-3.jpg" alt="small-bot-img" />
+                <img src="./imgs/roadmap-2.jpg" alt="descriptive alt goes here" />
+                <img src="./imgs/roadmap-3.jpg" alt="descriptive alt goes here" />
               </div>
             </figure>
             <section class="road-map-stage-info">
@@ -325,36 +308,28 @@
                 <li class="road-map-details-item">
                   <img
                     src="./imgs/road-map-logo.svg"
-                    alt="Logo Icon"
-                    width="24"
-                    height="24"
+                    alt=""
                   />
                   <p class="road-map-text">Befriending & Chat Functions</p>
                 </li>
                 <li class="road-map-details-item">
                   <img
                     src="./imgs/road-map-logo.svg"
-                    alt="Logo Icon"
-                    width="24"
-                    height="24"
+                    alt=""
                   />
                   <p class="road-map-text">Challenging Feature</p>
                 </li>
                 <li class="road-map-details-item">
                   <img
                     src="./imgs/road-map-logo.svg"
-                    alt="Logo Icon"
-                    width="24"
-                    height="24"
+                    alt=""
                   />
                   <p class="road-map-text">Corsair Wheel</p>
                 </li>
                 <li class="road-map-details-item">
                   <img
                     src="./imgs/road-map-logo.svg"
-                    alt="Logo Icon"
-                    width="24"
-                    height="24"
+                    alt=""
                   />
                   <p class="road-map-text">Mobile Version Launch</p>
                 </li>
@@ -367,8 +342,6 @@
               <img
                 src="./imgs/arrow-left-1.svg"
                 alt="arrow left"
-                width="24"
-                height="24"
               />
             </button>
             <ol class="phase-line">
@@ -393,8 +366,6 @@
               <img
                 src="./imgs/arrow-right-1.svg"
                 alt="arrow right"
-                width="24"
-                height="24"
               />
             </button>
           </form>
@@ -736,8 +707,6 @@
             <img
               src="./imgs/discord-original.svg"
               alt="Discord"
-              width="24"
-              height="18.29"
             />
             DISCORD
           </a>
@@ -758,54 +727,42 @@
             <a href="#"
               ><img
                 src="./imgs/community-1.svg"
-                alt="X/Twitter"
-                width="26.67"
-                height="26.67"
+                alt="x twitter"
             /></a>
           </li>
           <li class="community-social-item">
             <a href="#" class="social-link"
               ><img
                 src="./imgs/community-5.svg"
-                alt="Facebook"
-                width="26.67"
-                height="26.67"
+                alt="facebook"
             /></a>
           </li>
           <li class="community-social-item">
             <a href="#" class="social-link"
               ><img
                 src="./imgs/community-4.svg"
-                alt="Telegram"
-                width="26.67"
-                height="24"
+                alt="telegram"
             /></a>
           </li>
           <li class="community-social-item">
             <a href="#" class="social-link"
               ><img
                 src="./imgs/community-3.svg"
-                alt="Youtube"
-                width="26.67"
-                height="19.75"
+                alt="youtube"
             /></a>
           </li>
           <li class="community-social-item">
             <a href="#" class="social-link"
               ><img
                 src="./imgs/community-2.svg"
-                alt="TikTok"
-                width="26.67"
-                height="26.67"
+                alt="tiktok"
             /></a>
           </li>
           <li class="community-social-item">
             <a href="#" class="social-link"
               ><img
                 src="./imgs/community-6.svg"
-                alt="Discord"
-                width="26.67"
-                height="19.71"
+                alt="discord"
             /></a>
           </li>
         </ul>
